fixed:nav spacing changed

--- a/public/css/quiz-rule.css
+++ b/public/css/quiz-rule.css
@@ -9,6 +9,7 @@
 
 .navbar-bg{
     background: var(--navbar-bg);
+    padding: 1rem 1rem 0rem;
 }
 
 .nav-zindex{
